# 42-data-ai-specialization

./: README.md
ft_linear_regression/: .gitignore
ft_linear_regression/src/: predict.py  utils.py
python_for_data_science/: requirements.txt
python_for_data_science/python-0-starting/ex00/: Hello.py
python_for_data_science/python-0-starting/ex01/: format_ft_time.py
python_for_data_science/python-0-starting/ex02/: find_ft_type.py
python_for_data_science/python-0-starting/ex03/: NULL_not_found.py
python_for_data_science/python-0-starting/ex04/: whatis.py
python_for_data_science/python-0-starting/ex05/: building.py
python_for_data_science/python-0-starting/ex06/: filterstring.py  ft_filter.py
python_for_data_science/python-0-starting/ex07/: sos.py
python_for_data_science/python-0-starting/ex08/: Loading.py
python_for_data_science/python-0-starting/ex09/: LICENSE  pyproject.toml
python_for_data_science/python-0-starting/ex09/ft_package/: count_in_list.py
python_for_data_science/python-1-array/ex00/: give_bmi.py
python_for_data_science/python-1-array/ex01/: array2D.py
python_for_data_science/python-1-array/ex02/: load_image.py
python_for_data_science/python-1-array/ex03/: load_image.py  zoom.py
python_for_data_science/python-1-array/ex04/: load_image.py  rotate.py
python_for_data_science/python-1-array/ex05/: load_image.py  pimp_image.py
python_for_data_science/python-2-datatable/ex00/: load_csv.py
python_for_data_science/python-2-datatable/ex01/: aff_life.py
python_for_data_science/python-3-oop/: S1E9.py
src/: evaluate.py  train.py
(+4 files in other folders)
