[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A simple test package"
readme = "README.md"
authors = [
    {name = "Matthieu De Langhe"}
]
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.setuptools]
packages = ["ft_package"]